--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@mdi/font": "^7.2.96",
+        "@vitejs/plugin-vue": "^4.2.3",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "sass": "^1.63.4",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "vite-plugin-vuetify": "^1.0.2",
+        "vue-router": "^4.2.2",
+        "vuetify": "^3.3.4"
     }
 }
